password alerts for same password and no password inputs

--- a/src/main/resources/templates/patient_password_change.html
+++ b/src/main/resources/templates/patient_password_change.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -31,6 +31,8 @@
                             <label for="confirmNewPassword" class="form-label">Ponovno unesite novu lozinku:</label>
                             <input type="password" class="form-control form-control-lg bg-light fs-6" id="confirmNewPassword" name="confirmPassword">
                         </div>
+                        <p th:if="${samePasswordError}" class="text-danger">Nova lozinka ne smije biti ista kao stara!</p>
+                        <p th:if="${passwordMismatch}" class="text-danger">Lozinke nisu iste!</p>
                         <div class="input-group mb-5 d-flex justify-content-between">
                         </div>
                         <div class="input-group mb-3">
