style.css add max width, TelemedController add login action and login process changes, patient_password_change.html alerts add

--- a/src/main/resources/templates/patient_password_change.html
+++ b/src/main/resources/templates/patient_password_change.html
@@ -9,9 +9,9 @@
     <title>Telemed Promjena Lozinke</title>
 </head>
 
-<body class="container d-flex justify-content-center align-items-center min-vh-100">
+<body class="container">
 
-<div class="container">
+<div class="row justify-content-center align-items-center min-vh-100">
 
     <div class="row justify-content-center">
 
@@ -25,19 +25,29 @@
                         </div>
                         <div class="col-md-12 mb-3">
                             <label for="newPassword" class="form-label">Unesite novu lozinku:</label>
-                            <input type="password" class="form-control form-control-lg bg-light fs-6" id="newPassword" name="password">
+                            <input type="password" class="form-control form-control-lg bg-light fs-6" id="newPassword" name="password" th:value="${newPassword}">
                         </div>
                         <div class="col-md-12 mb-1">
                             <label for="confirmNewPassword" class="form-label">Ponovno unesite novu lozinku:</label>
-                            <input type="password" class="form-control form-control-lg bg-light fs-6" id="confirmNewPassword" name="confirmPassword">
+                            <input type="password" class="form-control form-control-lg bg-light fs-6" id="confirmNewPassword" name="confirmPassword" th:value="${confirmPassword}">
                         </div>
+                        <div class="col-md-12 mb-3">
+                            <div class="input-group" style="margin-top: 10px;">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="allowAccess" name="allowAccess">
+                                    <label class="form-check-label" for="allowAccess">Dopusti liječniku pristup mojim podacima</label>
+                                </div>
+                            </div>
+                        </div>
+                        <p th:if="${accessError}" class="text-danger" style="margin-top: 10px;">Morate dopustiti liječniku pristup podacima!</p>
                         <p th:if="${samePasswordError}" class="text-danger">Nova lozinka ne smije biti ista kao stara!</p>
                         <p th:if="${passwordMismatch}" class="text-danger">Lozinke nisu iste!</p>
+                        <p th:if="${passwordLengthError}" class="text-danger">Unesite lozinku od barem 5 znakova!</p>
                         <div class="input-group mb-5 d-flex justify-content-between">
                         </div>
-                        <div class="input-group mb-3">
+                        <div class="col-md-12 mb-3">
+                            <div class="input-group">
                             <button class="btn btn-og btn-primary w-100 fs-6" type="submit">Spremi</button>
-
                         </div>
                     </div>
                 </form>
